--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13806,19 +13806,59 @@ label.panel-block:hover {
   border-top-right-radius: 0;
 }
 
-.field.is-floating-label {
+.field.is-floating-label,
+.field.is-floating-in-label {
   position: relative;
 }
 
-.field.is-floating-label .label {
+.field.is-floating-label .label,
+.field.is-floating-in-label .label {
   position: absolute;
-  top: -0.775em;
   left: 1em;
   font-size: calc(1rem * 3 / 4);
   background-color: transparent;
+  z-index: 5;
+}
+
+.field.is-floating-label .label.is-small,
+.field.is-floating-in-label .label.is-small {
+  font-size: calc(0.75rem * 3 / 4);
+}
+
+.field.is-floating-label .label.is-medium,
+.field.is-floating-in-label .label.is-medium {
+  font-size: calc(1.25rem * 3 / 4);
+}
+
+.field.is-floating-label .label.is-large,
+.field.is-floating-in-label .label.is-large {
+  font-size: calc(1.5rem * 3 / 4);
+}
+
+.field.is-floating-label .taginput .counter,
+.field.is-floating-in-label .taginput .counter {
+  float: none;
+  text-align: right;
+}
+
+.field.is-floating-label.has-addons > .label + .control .button,
+.field.is-floating-label.has-addons > .label + .control .input,
+.field.is-floating-label.has-addons > .label + .control .taginput .taginput-container.is-focusable,
+.taginput .field.is-floating-label.has-addons > .label + .control .taginput-container.is-focusable,
+.field.is-floating-label.has-addons > .label + .control .select select,
+.field.is-floating-in-label.has-addons > .label + .control .button,
+.field.is-floating-in-label.has-addons > .label + .control .input,
+.field.is-floating-in-label.has-addons > .label + .control .taginput .taginput-container.is-focusable,
+.taginput .field.is-floating-in-label.has-addons > .label + .control .taginput-container.is-focusable,
+.field.is-floating-in-label.has-addons > .label + .control .select select {
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+.field.is-floating-label .label {
+  top: -0.775em;
   padding-left: 0.125em;
   padding-right: 0.125em;
-  z-index: 5;
 }
 
 .field.is-floating-label .label:before {
@@ -13831,18 +13871,6 @@ label.panel-block:hover {
   height: 0.375em;
   background-color: white;
   z-index: -1;
-}
-
-.field.is-floating-label .label.is-small {
-  font-size: calc(0.75rem * 3 / 4);
-}
-
-.field.is-floating-label .label.is-medium {
-  font-size: calc(1.25rem * 3 / 4);
-}
-
-.field.is-floating-label .label.is-large {
-  font-size: calc(1.5rem * 3 / 4);
 }
 
 .field.is-floating-label .input:focus,
@@ -13861,34 +13889,8 @@ label.panel-block:hover {
   box-shadow: none;
 }
 
-.field.is-floating-label .taginput .counter {
-  float: none;
-  text-align: right;
-}
-
-.field.is-floating-in-label {
-  position: relative;
-}
-
 .field.is-floating-in-label .label {
-  position: absolute;
   top: 0.25em;
-  left: 1em;
-  font-size: calc(1rem * 3 / 4);
-  background-color: transparent;
-  z-index: 5;
-}
-
-.field.is-floating-in-label .label.is-small {
-  font-size: calc(0.75rem * 3 / 4);
-}
-
-.field.is-floating-in-label .label.is-medium {
-  font-size: calc(1.25rem * 3 / 4);
-}
-
-.field.is-floating-in-label .label.is-large {
-  font-size: calc(1.5rem * 3 / 4);
 }
 
 .field.is-floating-in-label > .datepicker .input,
@@ -13939,11 +13941,6 @@ label.panel-block:hover {
 
 .field.is-floating-in-label .taginput .taginput-container {
   padding-top: calc(3.25em / 2 - (1.5rem * 3 / 4) / 2 + (0.275em - 1px));
-}
-
-.field.is-floating-in-label .taginput .counter {
-  float: none;
-  text-align: right;
 }
 
 .field.is-floating-in-label.has-numberinput .b-numberinput .control .button {
@@ -14433,6 +14430,7 @@ label.panel-block:hover {
 
 .progress-wrapper {
   position: relative;
+  overflow: hidden;
 }
 
 .progress-wrapper:not(:last-child) {
@@ -14448,6 +14446,7 @@ label.panel-block:hover {
   line-height: 1rem;
   font-weight: bold;
   color: white;
+  white-space: nowrap;
 }
 
 .progress-wrapper .progress {
@@ -16235,6 +16234,10 @@ MIT (https://github.com/Wikiki/bulma-steps/blob/master/LICENSE)
   cursor: pointer;
 }
 
+.b-table .table th .multi-sort-cancel-icon {
+  margin-left: 10px;
+}
+
 .b-table .table tr.is-selected .checkbox input:checked + .check {
   background: white url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3Cpath style='fill:%2300d1b2' d='M 0.04038059,0.6267767 0.14644661,0.52071068 0.42928932,0.80355339 0.3232233,0.90961941 z M 0.21715729,0.80355339 0.85355339,0.16715729 0.95961941,0.2732233 0.3232233,0.90961941 z'%3E%3C/path%3E%3C/svg%3E") no-repeat center center;
 }
@@ -16482,6 +16485,11 @@ MIT (https://github.com/Wikiki/bulma-steps/blob/master/LICENSE)
   border-left-color: transparent !important;
 }
 
+.b-tabs.is-multiline > .tabs ul {
+  flex-wrap: wrap;
+  flex-shrink: 1;
+}
+
 .tag .has-ellipsis {
   max-width: 10em;
   overflow: hidden;
@@ -16489,16 +16497,39 @@ MIT (https://github.com/Wikiki/bulma-steps/blob/master/LICENSE)
   text-overflow: ellipsis;
 }
 
+.taginput .taginput-container {
+  display: flex;
+}
+
 .taginput .taginput-container.is-focusable {
   padding-bottom: 0;
   padding-top: calc(0.275em - 1px);
   padding-left: 0;
   align-items: center;
-  display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   height: auto;
   cursor: text;
+}
+
+.taginput .taginput-container:not(.is-focusable) {
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  height: auto;
+}
+
+.taginput .taginput-container:not(.is-focusable).is-small {
+  border-radius: 2px;
+  font-size: 0.75rem;
+}
+
+.taginput .taginput-container:not(.is-focusable).is-medium {
+  font-size: 1.25rem;
+}
+
+.taginput .taginput-container:not(.is-focusable).is-large {
+  font-size: 1.5rem;
 }
 
 .taginput .taginput-container > .tag,
