--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,3 +24,13 @@
 
 /* Animate.css custom build (just selected animations to minimize bundle size) */
 //@import "../css/animate.min.css";
+
+tr.is-one {
+    background: greenyellow;
+}
+tr.is-two {
+    background: GoldenRod;
+}
+tr.is-three {
+    background: tomato;
+}
